fix(home): add flex styling to keep text center aligned

--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,8 @@
 .app {
-  align-items: center;
-  justify-content: center;
   font-family: "Quicksand-Regular", serif;
   font-size: 16px;
   line-height: 1.6;
-  height: inherit;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
