--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,4 +5,5 @@ footer {
   font-size: 0.7em;
   padding: 12px 0px;
   text-align: center;
+  z-index: 1;
 }
